fix question preview mobile with overflow-y for mobile only

--- a/app/styles/_questionPreview.scss
+++ b/app/styles/_questionPreview.scss
@@ -435,6 +435,7 @@ audio.audio-width-mobile {
     #questionIntro .question {
         width: unset;
         margin: 0 -30px;
+        overflow-y: auto;
     }
 
     #questionIntro .question .details {
